Adjustment of spacing and sizes in mobile view. Fixing search box auto focus. Adjustment of styles based on client's notes.

--- a/wp-content/themes/quittasmania/sass/theme/_theme.scss
+++ b/wp-content/themes/quittasmania/sass/theme/_theme.scss
@@ -76,6 +76,7 @@ body {
         color: $color_secondary;
         
         .warning-icon {
+            position: relative;
             display: block;
             float: left;
             margin-top: 2px;
@@ -89,11 +90,6 @@ body {
                 display: none;
                 background-image: url('../images/warning-icon-white.png');
             }
-        }
-        
-        .warning-icon::before,
-        .warning-icon::after {
-            display: none;
         }
     }
     
@@ -443,31 +439,9 @@ body {
     }
     
     .input-group .search-submit {
-        .circle-arrow {
-            width: 100%;
-            height: 100%;
-            stroke: currentColor;
-            //transform: rotate(90deg);
-        }
-        
-        .circle-arrow .circle-arrow__arrow {
-            -webkit-transition: stroke .12s cubic-bezier(.7,0,.3,1);
-            -moz-transition: stroke .12s cubic-bezier(.7,0,.3,1);
-            -o-transition: stroke .12s cubic-bezier(.7,0,.3,1);
-            transition: stroke .12s cubic-bezier(.7,0,.3,1);
-        }
-        
         .circle-arrow .circle-arrow__circle {
             stroke-dasharray: 95;
             stroke-dashoffset: 95;
-            -webkit-transition: stroke-dashoffset .3s ease;
-            -moz-transition: stroke-dashoffset .3s ease;
-            -o-transition: stroke-dashoffset .3s ease;
-            transition: stroke-dashoffset .3s ease;
-        }
-        
-        &:hover .circle-arrow {
-            //transform: translate3d(5px, 0, 0);
         }
         
         &:hover .circle-arrow .circle-arrow__circle {
@@ -516,6 +490,18 @@ body {
         
         .warning-icon:not(.white-version) {
             display: none;
+        }
+        
+        &:hover {
+            color: $color_secondary;
+        }
+        
+        &:hover .warning-icon.white-version {
+            display: none;
+        }
+        
+        &:hover .warning-icon:not(.white-version) {
+            display: block;
         }
     }
     
@@ -908,14 +894,43 @@ body:not(.home) {
 }
 
 .entry-content {
+    margin-left: 10px;
+    margin-right: 10px;
+    
     .section {
         padding-top: 30px;
+        
+        &:first-child {
+            padding-top: 10px;
+        }
+        
+        + h1,
+        + h2,
+        + h3,
+        + h4,
+        + h5,
+        + p,
+        + div {
+            margin-top: 30px;
+        }
+    }
+    
+    > h1,
+    > h2,
+    > h3,
+    > h4,
+    > h5,
+    > p,
+    > div {
+        margin-left: -15px;
+        margin-right: -15px;
     }
 }
 
 .featured-image {
     overflow: hidden;
     //margin-top: 67px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
@@ -923,6 +938,30 @@ body:not(.home) {
     width: 100%;
     height: auto;
     margin: 0 auto;
+}
+
+.circle-arrow {
+    width: 100%;
+    height: 100%;
+    stroke: currentColor;
+    
+    .circle-arrow__arrow {
+        -webkit-transition: stroke .12s cubic-bezier(.7,0,.3,1);
+        -moz-transition: stroke .12s cubic-bezier(.7,0,.3,1);
+        -o-transition: stroke .12s cubic-bezier(.7,0,.3,1);
+        transition: stroke .12s cubic-bezier(.7,0,.3,1);
+    }
+    
+    .circle-arrow__circle {
+        -webkit-transition: stroke-dashoffset .3s ease;
+        -moz-transition: stroke-dashoffset .3s ease;
+        -o-transition: stroke-dashoffset .3s ease;
+        transition: stroke-dashoffset .3s ease;
+    }
+}
+
+.mb-4-5 {
+    margin-bottom: 2rem;
 }
 
 
@@ -1085,6 +1124,8 @@ body:not(.home) {
     position: relative; 
     min-height: 576px;
     max-height: 1007px;
+    margin-left: -10px;
+    margin-right: -10px;
     background-color: $color_primary;
     
     .hero-image-image {
@@ -1254,6 +1295,22 @@ body:not(.home) {
             text-decoration: none;
         }
         
+        .quiz-section-button > a span {
+            display: inline-block;
+            width: 35px;
+            height: 35px;
+            margin-left: 3px;
+        }
+        
+        .quiz-section-button .circle-arrow .circle-arrow__circle {
+            stroke-dasharray: 95;
+            stroke-dashoffset: 95;
+        }
+        
+        .quiz-section-button > a:hover .circle-arrow .circle-arrow__circle {
+            stroke-dashoffset: 0;
+        }
+        /*
         .quiz-section-button > a::after {
             content: '';
             position: absolute;
@@ -1268,7 +1325,7 @@ body:not(.home) {
             -ms-transform: rotate(-90deg);
             -o-transform: rotate(-90deg);
             transform: rotate(-90deg);
-        }
+        }*/
     }
 }
 
@@ -1328,26 +1385,9 @@ body:not(.home) {
             margin-left: 3px;
         }
         
-        .article-section-button .circle-arrow {
-            width: 100%;
-            height: 100%;
-            stroke: currentColor;
-        }
-        
-        .article-section-button .circle-arrow .circle-arrow__arrow {
-            -webkit-transition: stroke .12s cubic-bezier(.7,0,.3,1);
-            -moz-transition: stroke .12s cubic-bezier(.7,0,.3,1);
-            -o-transition: stroke .12s cubic-bezier(.7,0,.3,1);
-            transition: stroke .12s cubic-bezier(.7,0,.3,1);
-        }
-        
         .article-section-button .circle-arrow .circle-arrow__circle {
             stroke-dasharray: 95;
             stroke-dashoffset: 95;
-            -webkit-transition: stroke-dashoffset .3s ease;
-            -moz-transition: stroke-dashoffset .3s ease;
-            -o-transition: stroke-dashoffset .3s ease;
-            transition: stroke-dashoffset .3s ease;
         }
         
         .article-section-button > a:hover .circle-arrow .circle-arrow__circle {
@@ -1374,12 +1414,13 @@ body:not(.home) {
             position: relative;
             display: inline-block;
             padding-right: 50px;
+            @include font-size(28px);
         }
         
         h1::after {
             content: '';
             position: absolute;
-            top: 10px;
+            top: 3px;
             right: 0;
             width: 33px;
             height: 33px;
@@ -1395,6 +1436,13 @@ body:not(.home) {
 }
 
 
+
+@media (min-width: 404px) {
+    .call-to-action .call-to-action-inner .call-to-action-link {
+        text-align: center;
+    }
+}
+
 //small - 576
 @include media-breakpoint-up(sm) {
     .navbar {
@@ -1407,8 +1455,9 @@ body:not(.home) {
         padding: 0 0.9375rem;
     }
     
-    .call-to-action .call-to-action-inner .call-to-action-link {
-        text-align: center;
+    .entry-content {
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
@@ -1456,7 +1505,7 @@ body:not(.home) {
     }
     
     .featured-image {
-        //margin-top: 0;
+        margin-bottom: 50px;
         height: 450px;
     }
     
@@ -1673,8 +1722,8 @@ body:not(.home) {
      * Blocks
      */
      
-    /*Hero Image*/
     
+    /*Heading*/
     .title-small {
         @include font-size(24px);
     }
@@ -1683,7 +1732,7 @@ body:not(.home) {
         margin-bottom: 16px;
     }
 
-    
+    /*Hero Image*/
     .hero-image {
         .hero-image-image {
             .play-button {
@@ -1730,6 +1779,11 @@ body:not(.home) {
             .quiz-section-button > a {
                 @include font-size(28px);
             }
+            
+            .quiz-section-button > a span {
+                width: 40px;
+                height: 40px;
+            }
         }
     }
     
@@ -1749,6 +1803,19 @@ body:not(.home) {
             
             p {
                 @include font-size(24px);
+            }
+        }
+    }
+    
+    /*Call to Action*/
+    .call-to-action {
+        .call-to-action-inner {
+            h1 {
+                @include font-size(35px);
+            }
+            
+            h1::after {
+                top: 7px;
             }
         }
     }
